# stable-diffusion-webui-distributed

./: .gitignore  0001-patch-in-support-for-distributed-extension.patch  CHANGELOG.md  README.md  install.py  preload.py  pyproject.toml
doc/: sdwui_distributed.drawio
javascript/: distributed.js
scripts/: distributed.py  extension.py
scripts/spartan/: UI.py  Worker.py  World.py  control_net.py  models.py  pmodels.py  shared.py  ui.py  worker.py  world.py
